[package]
name = "my_lib"
version = "0.3.0"
authors = ["DrFlowerkick <flowerkick14@gmail.com>"]
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
once_cell = "1.21.3"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
