[package]
name = "my_lib"
version = "0.7.1"
authors = ["DrFlowerkick <flowerkick14@gmail.com>"]
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.21.3"
rand = "0.8.5"
rand_distr = "0.4.3"
tracing = "0.1.41"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
itertools = "0.14.0"
rayon = "=1.10.0"
rayon-core = "=1.12.1"
